<resources>
    <string name="app_name">大语文</string>
    <string name="main_tab1">首页</string>
    <string name="main_tab2">选课</string>
    <string name="main_tab3">课程跟踪</string>
    <string name="main_tab4">FM</string>
    <string name="nenglifenxi">我的拼图</string>
    <string name="yixuankecheng">已选课程</string>
    <string name="tuijian_code">推荐码</string>
    <string name="top_txt">点赞排行</string>
    <string name="top_txt1">教师点赞排行榜</string>
    <string name="top_txt2">学业顾问点赞排行榜</string>
    <string name="top_txt3">校区助手点赞排行榜</string>
    <string name="jiaoshi_detail">教师详情</string>
    <string name="hot_recommond">热门推荐</string>
    <string name="fm">FM首页</string>
    <string name="user_center">用户中心</string>
    <string name="cancle">取消</string>
    <string name="sure">确定</string>
    <string name="exit_app">再按一次退出应用</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="login_account">账号密码登录</string>
    <string name="login_fast">快捷免密登录</string>
    <string name="input_verifycode">请输入验证码</string>
    <string name="get_verifycode">获取验证码</string>
    <string name="login_hint">请输入手机号</string>
    <string name="pwd_hint">请输入密码</string>
    <string name="forget_pwd">忘记密码？</string>
    <string name="forget_pwd_success">修改成功</string>
    <string name="forget_pwd_faild">修改成功</string>
    <string name="login_problem">登录遇到问题</string>
    <string name="login_option1">联系学业顾问</string>
    <string name="login_option2">查询学生编码</string>
    <string name="have_account">已有账号？</string>
    <string name="register_hint">请输入手机号</string>
    <string name="pwd_hint1">请输入6位以上密码</string>
    <string name="get_account_error">手机号码格式错误</string>
    <string name="password_length_error">密码长度应该不少于6个字符</string>
    <string name="veriy_length_error">验证码长度应该不少于6个字符</string>
    <string name="pass">跳过</string>
    <string name="xuesheng_name">学生姓名</string>
    <string name="add_hint">确定添加学生，开启大语文之旅</string>
    <string name="album_list">专辑列表</string>
    <string name="album_detail">专辑详情</string>
    <string name="album_teacher">授课教师</string>
    <string name="album_pinglun">学员评论</string>
    <string name="forget_pwd1">重置密码</string>
    <string name="forget_pwd_tip">为了安全，我们会向您的手机发送验证码</string>
    <string name="forget_pwd_next">下一步</string>
    <string name="forget_pwd_tip1">需由6-20位数字、字母或符号组成，至少两种</string>
    <string name="forget_pwd_tip2">已向手机号 %s 发生短信验证码</string>
    <string name="set_new_pwd">设置新密码</string>
    <string name="commit">提交</string>
    <string name="all_play">全部播放</string>
    <string name="like">喜欢</string>
    <string name="collect">收藏</string>
    <string name="share">分享</string>
    <string name="weixin">微信</string>
    <string name="pengyouquan">朋友圈</string>
    <string name="weibo">微博</string>
    <string name="qq">QQ</string>
    <string name="share_faile">分享失败</string>
    <string name="share_cancle">分享取消</string>
    <string name="share_success">分享成功</string>
    <string name="ping_hint">期待您的评论</string>
    <string name="send">发送</string>
    <string name="play_list">播放列表</string>
    <string name="collect_faild">收藏失败</string>
    <string name="ganshou_ketang">感受课堂</string>
    <string name="wode">我的</string>
    <string name="un_login">未登录</string>
    <string name="my_info">个人资料</string>
    <string name="my_history">收听历史</string>
    <string name="tianxie_code">兑换课程</string>
    <string name="about">关于大语文</string>
    <string name="logout">退出登录</string>
    <string name="my_follow">我关注的班级</string>
    <string name="my_tuan">我的团购</string>
    <string name="my_yue">我的余额</string>
    <string name="my_tuan_tab1">我发起的团购</string>
    <string name="my_tuan_tab2">我参加的团购</string>
    <string name="feedback">意见反馈</string>
    <string name="search">搜索</string>
    <string name="no_search">无相关搜索内容，请尝试其他关键词</string>
    <string name="city_search">输入城市名或者拼音查询</string>
    <string name="huiyuanziliao">会员资料</string>
    <string name="qiehuanxuehseng">切换学生</string>
    <string name="wodedingdan">我的订单</string>
    <string name="my_gifts">来自孩子的礼物</string>
    <string name="gerenshoucang">我的收藏</string>
    <string name="invite">邀请好友加入大语文</string>
    <string name="tiaoke">调课</string>
    <string name="zhuanban">转班</string>
    <string name="gongxundengji">功勋等级：</string>
    <string name="wodecode">我的邀请码：</string>
    <string name="look_gongxun_guize">查看等级规则>></string>
    <string name="touxiang">头像</string>
    <string name="xingming">姓名</string>
    <string name="student_no">学员编号</string>
    <string name="gender">性别</string>
    <string name="phone">手机号</string>
    <string name="address">地址</string>
    <string name="birthday">生日</string>
    <string name="camera">拍照</string>
    <string name="select_from_album">从手机相册选择</string>
    <string name="motify_nickname">修改姓名</string>
    <string name="motify_telephone">修改电话号码</string>
    <string name="nick_name_length_error">用户昵称应该低于8位</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="nomale">保密</string>
    <string name="choose_city">选择城市</string>
    <string name="plz_choose">请选择</string>
    <string name="upload_faild">上传头像失败</string>
    <string name="change_info_faild">修改信息失败</string>
    <string name="no_wifi">似乎已断开与互联网的连接</string>
    <string name="no_content">暂时没有相关的内容</string>
    <string name="today">今天</string>
    <string name="yesterday">更早</string>
    <string name="pull_to_refresh_pull_label">下拉刷新...</string>
    <string name="pull_to_refresh_release_label">松开刷新...</string>
    <string name="pull_to_refresh_refreshing_label">正在刷新...</string>
    <string name="pull_to_refresh_tap_label">点击刷新...</string>
    <string name="pull_to_refresh_update_time">上次更新时间:%s</string>
    <string name="pull_to_loadmore">上推加载...</string>
    <string name="pull_to_release">松开加载...</string>
    <string name="pull_to_loading">正在加载...</string>
    <string name="click_to_load">点击加载</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载...</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="ke_calender">课程日历</string>
    <string name="add_calendar">添加日历</string>
    <string name="save">保存</string>
    <string name="add_option1">课程名称</string>
    <string name="add_option2">开课时间</string>
    <string name="add_option3">结课时间</string>
    <string name="add_option4">上课时间</string>
    <string name="add_option5">下课时间</string>
    <string name="add_option6">课程次数</string>
    <string name="add_option7">上课地点</string>
    <string name="add_option8">课程机构</string>
    <string name="add_option9">授课老师</string>
    <string name="add_option10">课程编码</string>
    <string name="add_option11">增减课程</string>
    <string name="plz_tian">请填写</string>
    <string name="my_xunzhang">我的勋章</string>
    <string name="woyaopingtuan">我要拼团</string>
    <string name="yiqipingtuan">一起拼团</string>
    <string name="pingtuan_intro">拼团说明</string>
    <string name="woxiandianshang">我先垫上</string>
    <string name="woyaokaituan">我要开团</string>
    <string name="pingtuan_hint">请输入您收到的拼团码</string>
    <string name="pingtuan_hint1">请输入您收到的课程码</string>
    <string name="dian_option1">垫付数量（含自己）</string>
    <string name="dian_option3">课程总价格</string>
    <string name="dian_option4">教材价格</string>
    <string name="dian_option5">团购优惠价</string>
    <string name="dian_option6">运费</string>
    <string name="dian_option7">需付款：</string>
    <string name="dian_option8">合计：</string>
    <string name="dian_option9">确认垫付</string>
    <string name="kai_tip">请在10分钟内邀请5人以上的好友参团</string>
    <string name="kai_copy">复制拼团码</string>
    <string name="kai_share">分享拼团</string>
    <string name="kai_pay">报名付费</string>
    <string name="tuan_success">付费状态</string>
    <string name="chakan_kecheng">查看课程跟踪</string>
    <string name="manage_dizhi">地址管理</string>
    <string name="gift_child">来自孩子的礼物</string>
    <string name="add_address">+ 新增地址</string>
    <string name="add_address1">新增地址</string>
    <string name="save_address">保存地址</string>
    <string name="set_defualt">设为默认</string>
    <string name="edit">编辑</string>
    <string name="delete">删除</string>
    <string name="choose_people">选联系人</string>
    <string name="shouhuoren">收货人</string>
    <string name="suozaidiqu">所在地区</string>
    <string name="suozaichengshi">所在城市</string>
    <string name="detail_address">详细地址</string>
    <string name="detail_address_hint">街道、楼牌号等</string>
    <string name="tag">标签</string>
    <string name="tag_hint">请输入标签名称，最多5个字</string>
    <string name="woderongyu">我的荣誉</string>
    <string name="ruxue_day">入学年月</string>
    <string name="nianji">年级</string>
    <string name="zaiduxuexiao">在读学校</string>
    <string name="jinji_lianxi">紧急联系电话</string>
    <string name="jiang_hint1">请输入奖状名称</string>
    <string name="jiang_hint2">请选择获奖日期</string>
    <string name="delete_all">全部删除</string>
    <string name="pay_add_address">添加收货地址</string>
    <string name="my_order">我的订单</string>
    <string name="commit_order">提交订单</string>
    <string name="order_detail">订单详情</string>
    <string name="my_order_tab1">购课单</string>
    <string name="my_order_tab2">待付款</string>
    <string name="my_order_tab3">已付款</string>
    <string name="my_order_tab4">退款/售后</string>
    <string name="waiting_pay">等待付款</string>
    <string name="youhuiquan">优惠券</string>
    <string name="lingqu">领取</string>
    <string name="go_pay">去支付</string>
    <string name="tuifei">申请退费</string>
    <string name="wait_ping">待评价</string>
    <string name="copy">复制</string>
    <string name="order_cancle">取消订单</string>
    <string name="order_option1">订单编号：</string>
    <string name="order_option2">下单时间：</string>
    <string name="order_option3">支付方式：</string>
    <string name="order_option4">配送方式：</string>
    <string name="order_option5">商品总额：</string>
    <string name="order_option6">运费：</string>
    <string name="order_option7">拼团码：</string>
    <string name="order_option8">支付明细</string>
    <string name="order_option9">发票</string>
    <string name="order_option10">支付宝支付：</string>
    <string name="order_option11">微信支付：</string>
    <string name="order_option12">退款方式须知</string>
    <string name="order_option13">垫付人数</string>
    <string name="order_option14">账户余额</string>
    <string name="order_option15">请输入推荐码（选填）</string>
    <string name="order_option16">限免优惠：</string>
    <string name="order_option17">优惠券优惠：</string>
    <string name="order_option18">组合优惠：</string>
    <string name="order_option19">团购优惠：</string>
    <string name="order_option20">余额抵扣：</string>
    <string name="order_option21">支付时间：</string>
    <string name="tui_fee_list">选择退费课程</string>
    <string name="lijibaoming">立即报名</string>
    <string name="lijibuy">立即购买</string>
    <string name="settings">设置</string>
    <string name="setting_option1">账号与安全</string>
    <string name="setting_option2">新消息通知</string>
    <string name="setting_option3">隐私</string>
    <string name="setting_option4">关于大语文</string>
    <string name="setting_option5">会员编码（邀请码）</string>
    <string name="setting_option6">密码</string>
    <string name="setting_option7">应急联系人</string>
    <string name="tongzhi">通知</string>
    <string name="topic">话题</string>
    <string name="tongzhi1">系统通知</string>
    <string name="tongzhi2">互动通知</string>
    <string name="tongzhi3">课程通知</string>
    <string name="tongzhi4">其他</string>
    <string name="hide_full_class">隐藏满班</string>
    <string name="submit">提交</string>
</resources>