<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"
        android:visible="false"
        android:title="@string/action_settings" />
    <item
        android:id="@+id/action_submit"
        android:orderInCategory="100"
        android:title="@string/submit"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_share"
        android:orderInCategory="100"
        android:title="@string/share"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_order_no"
        android:orderInCategory="100"
        android:title="@string/hide_full_class"
        android:visible="false"
        app:showAsAction="never" />
</menu>
