<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"

        android:background="@drawable/white_10radius_corner_bg"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/plz_choose"
            android:textColor="@color/gray_dark"
            android:textSize="@dimen/text_size_14" />

        <View

            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height"
            android:background="@color/gray_line" />

        <TextView
            android:id="@+id/gender_male"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/male"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_14" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height"
            android:background="@color/gray_line" />

        <TextView
            android:id="@+id/gender_female"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/female"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_14" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height"
            android:background="@color/gray_line" />

        <TextView
            android:id="@+id/gender_nomale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/nomale"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_14" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height"
            android:background="@color/gray_line" />
    </LinearLayout>

    <TextView
        android:id="@+id/gender_cancle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/white_10radius_corner_bg"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/cancle"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_14" />


</LinearLayout>