<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/bar_height"
        android:background="@color/lisichen"
        android:padding="10dp">

        <ImageView
            android:id="@+id/tuan_kai_back"
            android:layout_width="@dimen/back_size"
            android:layout_height="@dimen/back_size"
            android:src="@mipmap/icon_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/woyaokaituan"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_16" />

    </RelativeLayout>

    <ImageView
        android:layout_width="120dp"
        android:layout_height="80dp"
        android:scaleType="centerInside"
        android:layout_marginTop="50dp"
        android:src="@mipmap/check_group_logo" />

    <TextView
        android:id="@+id/tuan_kai_code"
        android:layout_width="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:textColor="@color/gray_dark"
        android:textSize="@dimen/text_size_14" />

    <TextView
        android:id="@+id/kai_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/kai_tip"
        android:textColor="@color/gray_dark"
        android:textSize="@dimen/text_size_14" />

    <TextView
        android:id="@+id/tuan_kai_copy"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/blue_circle"
        android:gravity="center"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:text="@string/kai_copy"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_14" />

    <TextView
        android:id="@+id/tuan_kai_share"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/gold_circle"
        android:gravity="center"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:text="@string/kai_share"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_14" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/tuan_kai_pay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gold"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/kai_pay"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_16" />

</LinearLayout>