<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"

        android:background="@drawable/white_10radius_corner_bg"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/plz_choose"
            android:textColor="@color/gray_dark"
            android:textSize="@dimen/text_size_14" />

        <View

            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height"
            android:background="@color/gray_line" />

        <TextView
            android:id="@+id/fetch_image_from_camear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/camera"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_14" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_height"
            android:background="@color/gray_line" />

        <TextView
            android:id="@+id/fetch_image_from_gallery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/select_from_album"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_14" />

    </LinearLayout>
    <TextView
        android:id="@+id/fetch_image_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/cancle"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_14"
        android:background="@drawable/white_10radius_corner_bg"
      />


</LinearLayout>