<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_dark"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".activity.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/login_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@color/black" />

        <TextView
            android:id="@+id/login_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/register"
            android:textColor="@color/gold"
            android:textSize="@dimen/text_size_14" />
    </RelativeLayout>


    <EditText
        android:id="@+id/login_account_edit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/bar_height"
        android:layout_marginTop="100dp"
        android:background="@null"
        android:gravity="center_vertical"
        android:hint="@string/login_hint"
        android:inputType="number"
        android:paddingLeft="20dp"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textColorHint="@color/gray_light"
        android:textSize="@dimen/text_size_14" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_height"
        android:background="@color/gray_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/bar_height"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/login_pwd_edit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/pwd_hint"
            android:inputType="textPassword"
            android:paddingLeft="20dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="@color/gray_light"
            android:textSize="@dimen/text_size_14" />

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:background="@color/black" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_height"
        android:background="@color/gray_line" />

    <TextView
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/gold_circle"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_14" />

    <TextView
        android:id="@+id/login_forget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="right"
        android:text="@string/forget_pwd"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_12" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/login_problem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        android:text="@string/login_problem"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_12" />
</LinearLayout>